--- a/app/views/goodcauses/index.html.erb
+++ b/app/views/goodcauses/index.html.erb
@@ -44,7 +44,7 @@
           It’s a long way from Portland to Tanzania. Read how our founder, Ashley Holmer, first saw the potential in a red sweater and explore our timeline to see how far we’ve come since 2005.
         </p>
         <div class="btns-wrapper">
-          <a href="/pages/ourstory" class="btn btn-solid">SEE HOW IT ALL BEGAN</a>
+          <a href="/pages/ourstory" class="btn btn-solid mt-4">SEE HOW IT ALL BEGAN</a>
         </div>
       </div>
     </div>
