--- a/app/views/pages/getcreative.html.erb
+++ b/app/views/pages/getcreative.html.erb
@@ -12,10 +12,10 @@
       <h2>FUNDRAISING IDEAS</h2>
       <p class="lead">Here are some simple, impactful ways you can fundraise for your own volunteer trip or directly support Red Sweater Project students.</p>
       <!-- <div class="col-sm-12"> -->
-        <div class="row">
+        <div class="row mt-4">
           <div class="col-sm-4">
             <div class="img-wrapper">
-              <%= image_tag("RUN.jpg", :class => "img-responsive")%>
+              <%= image_tag("RUN.jpg", :class => "img-fluid")%>
             </div>
             <div class="focusCopy">
               <h5><strong>1. ORGANIZE OR RUN A RACE</strong></h5>
@@ -26,7 +26,7 @@
           <div class="col-sm-4">
             <hr class="mobile-hr yellow-hr">
             <div class="img-wrapper">
-              <%=image_tag("birthday-cake-380178_640.jpg", :class => "img-responsive")%>
+              <%=image_tag("birthday-cake-380178_640.jpg", :class => "img-fluid")%>
             </div>
             <div class="focusCopy">
               <h5><strong>2. DEDICATE A BIRTHDAY</strong></h5>
@@ -37,7 +37,7 @@
           <div class="col-sm-4">
             <hr class="mobile-hr yellow-hr">
             <div class="img-wrapper">
-              <%= image_tag("event_detroit.jpg", :class => "img-responsive")%>
+              <%= image_tag("event_detroit.jpg", :class => "img-fluid")%>
             </div>
             <div class="focusCopy">
               <h5><strong>3. HOST AN EVENT</strong></h5>
@@ -65,7 +65,7 @@
             Volunteer your time in Tanzania or abroad and walk away with a new perspective.
           </p>
           <div class="btns-wrapper">
-            <%= link_to 'EXPLORE VOLUNTEER OPPORTUNITIES', volunteers_path, :class=>"btn btn-solid" %>
+            <%= link_to 'EXPLORE VOLUNTEER OPPORTUNITIES', volunteers_path, :class=>"btn btn-solid mt-4" %>
           </div>
         </div>
       </div>
