--- a/app/views/pages/news-testimonials.html.erb
+++ b/app/views/pages/news-testimonials.html.erb
@@ -150,7 +150,7 @@
           Volunteer your time in Tanzania or abroad and walk away with a new perspective.
         </p>
         <div class="btns-wrapper">
-          <%= link_to 'EXPLORE VOLUNTEER OPPORTUNITIES', volunteers_path, :class=>"btn btn-solid" %>
+          <%= link_to 'EXPLORE VOLUNTEER OPPORTUNITIES', volunteers_path, :class=>"btn btn-solid mt-4" %>
         </div>
       </div>
     </div>
