--- a/app/views/pages/ourfocus.html.erb
+++ b/app/views/pages/ourfocus.html.erb
@@ -15,7 +15,7 @@
 
   <div class="flex container">
     <div class="flex-item-image">
-      <img src="../images/ourfocus_genderequality.png" />
+      <img src="../images/hero/hero_blog.jpg" />
     </div>
   </div>
   <div class="flex page-canvas">
