--- a/app/views/pages/ourstory.html.erb
+++ b/app/views/pages/ourstory.html.erb
@@ -233,3 +233,28 @@
     </div>
   </div>
 </div>
+
+<div class="yellow">
+  <div class="flex page-canvas nowrap">
+    <div class="flex-item-2col">
+      <div class="twocol-left-text">
+        <h2>VOLUNTEER WITH US</h2>
+        <p class="lead">
+          Volunteer your time in Tanzania or abroad and walk away with a new perspective.
+        </p>
+        <div class="btns-wrapper">
+          <%= link_to 'EXPLORE VOLUNTEER OPPORTUNITIES', volunteers_path, :class=>"btn btn-solid mt-4" %>
+        </div>
+      </div>
+    </div>
+    <div class="shadow nonmobile">
+      <div class="flex-item-2col be-a-volunteer">
+      </div>
+    </div>
+  </div>
+  </div>
+</div>
+<div class="shadow mobile">
+  <div class="flex-item-2col be-a-volunteer">
+  </div>
+</div>
